--- a/mvc/wwwroot/css/site.css
+++ b/mvc/wwwroot/css/site.css
@@ -14,8 +14,8 @@
 
 .main-home {
   width: 50%;
-  height: 70%;
-  background-color: #c4c4c4;
+  height: 500px;
+  background-color: #e2e2e2;
   border-radius: 7.5px;
   box-shadow: 2px 10px 20px 1px rgba(0, 0, 0, 0.2);
 }
@@ -26,9 +26,13 @@
   font-weight: 600;
 }
 
+.area-title p {
+  font-size: 1.2rem;
+}
+
 .area-btn-menu {
   width: 100%;
-  height: 60%;
+  height: 50%;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -41,19 +45,19 @@
   text-align: center;
   font-weight: 600;
   text-decoration: none;
-  background-color: #a3a3a3;
+  background-color: #c2c2c2;
   border: 1px solid rgba(0, 0, 0, 0.2);
   color: #000;
 }
 
 .btn-opcao:hover {
   color: #000;
-  background-color: #929292;
+  background-color: #b6b6b6;
 }
 
 .area-btn-auxiliar {
   width: 85%;
-  margin: 5% auto 0 auto;
+  margin: 10% auto 0 auto;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -66,7 +70,7 @@
   text-align: center;
   font-weight: 600;
   text-decoration: none;
-  background-color: #a3a3a3;
+  background-color: #c2c2c2;
   border: 1px solid rgba(0, 0, 0, 0.2);
   color: #000;
   margin-left: 5%;
@@ -74,5 +78,5 @@
 
 .btn-opcao-auxiliar:hover {
   color: #000;
-  background-color: #929292;
+  background-color: #b6b6b6;
 }
