concluindo site, adicionando api externa

--- a/mvc/Views/Home/Index.cshtml
+++ b/mvc/Views/Home/Index.cshtml
@@ -7,12 +7,9 @@
         <p>O que você deseja fazer? Clique na opção:</p>
     </div>
     <div class="area-btn-menu">
-        <a href="#" class="btn-opcao">Registrar denúncia</a>
+        <a asp-controller="RegistrarDenuncia" asp-action="Index" class="btn-opcao">Registrar denúncia</a>
         <a href="#" class="btn-opcao">Acompanhar denúncia</a>
         <a href="#" class="btn-opcao">Outros</a>
         <a href="#" class="btn-opcao">Alterar dados cadastrais</a>
-    </div>
-    <div class="area-btn-auxiliar">
-        <a href="#" class="btn-opcao-auxiliar">Sair</a>
     </div>
 </div>
