--- a/mvc/Views/Sucess/Index.cshtml
+++ b/mvc/Views/Sucess/Index.cshtml
@@ -14,4 +14,5 @@
         <p>TELEFONE: (83) 3218-2325</p>
         <p>E-MAIL: ambiental@gmail.com</p>
     </div>
+    <a asp-controller="Home" asp-action="Index" class="btn-opcao-auxiliar btn-voltar-sucess">Voltar</a>
 </div>
