--- a/mvc/Views/RegistrarDenuncia/Index.cshtml
+++ b/mvc/Views/RegistrarDenuncia/Index.cshtml
@@ -6,7 +6,7 @@
     <div class="area-title">
         <p>Preencha os dados referentes à denuncia:</p>
     </div>
-    <div class="area-form-cadastrar-denuncia">
+    <form class="area-form-cadastrar-denuncia">
         <div class="textField-cadastrar-denuncia">
             <label class="font-escurinha">Data</label>
             <input type="date" >
@@ -16,8 +16,18 @@
             <input type="time" >
         </div>
         <div class="textField-cadastrar-denuncia">
-            <label class="font-escurinha">Endereço/Localização</label>
-            <input type="text" >
+            <label class="font-escurinha">CEP</label>
+            <div class="div-btn-cep">
+                <input id="cep" type="number" >
+                <button class="btn-cep" onclick="consultarEndereco()">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                    </svg>
+                </button>
+            </div>
+        </div>
+        <div id="resultado">
+            
         </div>
         <div class="textField-cadastrar-denuncia">
             <label class="font-escurinha">Ponto de Referência</label>
@@ -58,10 +68,41 @@
             <label class="font-escurinha">Anexar foto ou vídeo</label>
             <input type="file">
         </div>
-    </div>
+    </form>
     <div class="area-btn-auxiliar-tela-cadastrar-denuncia">
-        <a href="#" class="btn-opcao-auxiliar">Voltar</a>
-        <a href="#" class="btn-opcao-auxiliar">Registrar</a>
-        <a href="#" class="btn-opcao-auxiliar">Sair</a>
+        <a asp-controller="Home" asp-action="Index" class="btn-opcao-auxiliar">Voltar</a>
+        <a asp-controller="Sucess" asp-action="Index" class="btn-opcao-auxiliar">Registrar</a>
     </div>
 </div>
+
+<script>
+    function consultarEndereco() {
+        event.preventDefault()
+        let cep = document.querySelector('#cep').value;
+
+        if (cep.length !== 8) {
+            alert('CEP inválido!');
+            return;
+        }
+
+        let url = `https://viacep.com.br/ws/${cep}/json/`;
+
+        fetch(url).then(function(response){
+            response.json().then(mostrarEndereco);
+        });
+    }
+
+    function mostrarEndereco(dados) {
+        let resultado = document.querySelector('#resultado');
+        if (dados.erro) {
+            resultado.innerHTML = "Não foi possível encontrar o endereço!";
+        } else {
+            resultado.innerHTML = `
+            <div class="textField-cadastrar-denuncia">
+                <label class="font-escurinha">Endereço</label>
+                <input type="text" value="${dados.logradouro}, ${dados.bairro}, ${dados.localidade}, ${dados.uf}" >
+            </div>
+            `
+        }
+    }
+</script>
